fix(logo):added small fix for logo coloring on mobile

--- a/components/footer/footer.less
+++ b/components/footer/footer.less
@@ -178,7 +178,7 @@
 
 .footer .menu-social {
 	width: 100%;
-	max-width: 70%;
+	// max-width: 70%;
 	margin: 0 auto @spacing-small 0;
 
 	@media @screen-medium {
